--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans Condensed', sans-serif;
 	padding: 20px 60px;
+}
+
+button {
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
 a {
